# Authorization

./: docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  dependencies.py
app/db/: base.py  connections.py
app/services/: security.py
app/users/: auth_services.py  model.py  routers.py  schemas.py
app/users/models/: model_refresh_token.py  model_user.py
