[project]
name = "authorization"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeniy Semin",email = "evgeniy.zhenia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
