[project]
name = "authorization"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeniy Semin",email = "evgeniy.zhenia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.5.0,<4.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
